Overflow fixes

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html, body {
   width: 100vw;
   height: 100vh;
   background-image: linear-gradient(to right top, #000630, #130125, #18001b, #170012, #110008, #140108, #170108, #190207, #240409, #2d0509, #370306, #410000);
-  overflow: scroll;
+  overflow: hidden;
   font-family: 'Cinzel';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -13,6 +13,13 @@ html, body {
   width: 0px;
   background: transparent;
 }
+
+@media screen and (max-width: 768px) {
+  html, body {
+    overflow: scroll;
+  }
+}
+
 .tree-container {
   position: relative;
   z-index: 9999;
